force-app/main/default/objects/Case/fields/Bank_Information__c.field-meta.xml
<CustomField>
    <fullName>Bank_Information__c</fullName>
    <label>Bank Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>