force-app/main/default/objects/Case/fields/Dispute_Type__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Type__c</fullName>
    <label>Dispute Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undelivered Product or Service</fullName>
            </value>
            <value>
                <fullName>Failed Transaction</fullName>
            </value>
            <value>
                <fullName>Refund Not Processed</fullName>
            </value>
            <value>
                <fullName>Products or Services Not as Described</fullName>
            </value>
            <value>
                <fullName>Defective Product</fullName>
            </value>
            <value>
                <fullName>Charged Multiple Times</fullName>
            </value>
            <value>
                <fullName>Outstanding Charge on Original Payment Method</fullName>
            </value>
            <value>
                <fullName>Overcharged</fullName>
            </value>
            <value>
                <fullName>Account Debited but No Cash Dispensed by ATM</fullName>
            </value>
            <value>
                <fullName>Fraudulent Transaction</fullName>
            </value>
            <value>
                <fullName>Disclosed OTP, Card, or Account Details</fullName>
            </value>
            <value>
                <fullName>Lost or Stolen Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>