force-app/main/default/objects/Case/fields/Document_AI_Response__c.field-meta.xml
<CustomField>
    <fullName>Document_AI_Response__c</fullName>
    <label>Document AI Response</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>