force-app/main/default/objects/Case/fields/Financial_Account_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account Transaction</label>
    <referenceTo>FinancialAccountTransaction</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>