force-app/main/default/objects/Case/fields/GST_Registration_Number_Hotel__c.field-meta.xml
<CustomField>
    <fullName>GST_Registration_Number_Hotel__c</fullName>
    <label>GST Registration Number (Hotel)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>