force-app/main/default/objects/Case/fields/Invoice_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reference_Number__c</fullName>
    <label>Invoice Reference Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>