force-app/main/default/objects/Case/fields/New_EMI__c.field-meta.xml
<CustomField>
    <fullName>New_EMI__c</fullName>
    <label>New EMI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>