force-app/main/default/objects/Case/fields/New_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Outstanding_Amount__c</fullName>
    <label>New Outstanding Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>