force-app/main/default/objects/Case/fields/PAN_Number_Hotel__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number_Hotel__c</fullName>
    <label>PAN Number (Hotel)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>