force-app/main/default/objects/Case/fields/Selected_Option__c.field-meta.xml
<CustomField>
    <fullName>Selected_Option__c</fullName>
    <label>Selected Option</label>
    <length>10</length>
    <type>Text</type>
</CustomField>