force-app/main/default/objects/Case/fields/Total_Fare__c.field-meta.xml
<CustomField>
    <fullName>Total_Fare__c</fullName>
    <label>Total Fare</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>